<resources>
    <string name="app_name">Calendar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_calendar">行事曆</string>
    <string name="menu_work">工作</string>
    <string name="menu_diary">日記</string>
    <string name="define">確定</string>
    <string name="cancel">取消</string>
    <string name="newRemind">新增體醒</string>
    <string name="newTitle">標題</string>
    <string name="allDay">全天</string>
    <string name="type">類型</string>
    <string name="start">開始\n時間</string>
    <string name="end">結束\n時間</string>
    <string name="time">時間：</string>
    <string name="blue">藍色</string>
    <string name="red">紅色</string>
    <string name="green">綠色</string>
    <string name="yellow">黃色</string>
    <string name="magenta">洋紅色</string>
    <string name="purple">紫色</string>
    <string name="orange">橘色</string>
    <string name="cyan">青色</string>
    <string name="save">儲存</string>
    <string name="hour">點</string>
    <string name="minute">分</string>
    <string name="expired">過期</string>
    <string name="append">新增</string>
    <string name="login">登入</string>
    <string name="username">帳號</string>
    <string name="password">密碼</string>
    <string-array name="spinner">
        <item>工作</item>
        <item>活動</item>
        <item>提醒</item>
    </string-array>
    <string-array name= "typeAndAll_array">
        <item>全部</item>>
        <item>工作</item>
        <item>活動</item>
        <item>提醒</item>
    </string-array>
</resources>