<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_calendar">

    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.example.calendar.ui.calendar.CalendarFragment"
        android:label="@string/menu_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/nav_work"
        android:name="com.example.calendar.ui.work.WorkFragment"
        android:label="@string/menu_work"
        tools:layout="@layout/fragment_work" />

    <fragment
        android:id="@+id/nav_diary"
        android:name="com.example.calendar.ui.diary.DiaryFragment"
        android:label="@string/menu_diary"
        tools:layout="@layout/fragment_diary" />
</navigation>